--- a/trunk/README
+++ b/trunk/README
@@ -7,9 +7,11 @@ Source-Navigator NG is a fork of the original Source-Navigator and it is
 released under the terms of the GPL; see the COPYING file for more 
 information about the GPL.
 
-The Source-Navigator NG project is hosted at
+The Source-Navigator NG project is currently hosted at
 
-http://sourcenav.berlios.de
+http://sourcenav.sf.net
+
+(It was moved from http://sourcenav.berlios.de because of it's closure)
 
 A number of public mailing lists are available to answer general end
 user questions, as well as developer's questions. Go to the project
