--- a/trunk/README
+++ b/trunk/README
@@ -1,7 +1,8 @@
-This is Source-Navigator NG, an IDE for C/C++/Fortran/Java/Tcl/PHP/Python
-and a host of other languages. It includes powerful
-source code comprehension features that help a developer understand
-complex relationships between elements of a program's source.
+This is Source-Navigator Next Generation (SN-NG), an IDE for
+C/C++/Fortran/Java/Tcl/PHP/Python and a host of other languages.
+It includes powerful source code comprehension features that help
+a developer understand complex relationships between elements of
+a program's source.
 
 Source-Navigator NG is a fork of the original Source-Navigator and it is 
 released under the terms of the GPL; see the COPYING file for more 
@@ -11,7 +12,7 @@ The Source-Navigator NG project is currently hosted at
 
 http://sourcenav.sf.net
 
-(It was moved from http://sourcenav.berlios.de because of it's closure)
+(It was moved from http://sourcenav.berlios.de because of its closure)
 
 A number of public mailing lists are available to answer general end
 user questions, as well as developer's questions. Go to the project
